--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.navbar {
+	@apply bg-lahs-blue border-2 border-gray-300 rounded-lg shadow-lg p-5 z-0;
+}
