--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -6,7 +6,7 @@
 		@apply bg-gray-800 text-white transition-all duration-100 ease-linear;
 	}
 	.light {
-		@apply bg-gray-200 text-gray-800 transition-all duration-100 ease-linear;
+		@apply bg-white text-gray-800 transition-all duration-100 ease-linear;
 	}
 }
 .navbar {
