--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,6 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* Adds scroll snap to tailwind */
+@layer utilities {
+	.snap {
+		scroll-snap-type: var(--scroll-snap-direction) var(--scroll-snap-constraint);
+	}
+	.snap-y {
+		--scroll-snap-direction: y;
+	}
+	.snap-mandatory {
+		--scroll-snap-constraint: mandatory;
+	}
+	.snap-start {
+		scroll-snap-align: start;
+	}
+}
 @layer base {
 	.dark {
 		@apply bg-gray-800 text-white transition-all duration-100 ease-linear;
@@ -17,4 +32,6 @@
 }
 .navbar-link {
 	@apply hover:bg-lahs-blue-hover rounded-none  hover:rounded-md text-center hover:shadow-lg p-5 dark:text-gray-200 text-white font-semibold hover:text-gray-200 transition-all duration-200 ease-linear;
+}
+.navbar-link-mobile {
 }
