--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -12,15 +12,27 @@
 	}
 }
 .navbar {
-	@apply bg-lahs-blue border-2 border-gray-200 dark:border-gray-800 rounded-lg shadow-lg p-5 z-0 flex flex-row pb-2 pt-2 md:flex-col sm:flex-col md:items-center md:justify-between;
+	@apply bg-lahs-blue border-2 border-gray-200 dark:border-gray-800 rounded-lg shadow-lg p-5 z-0 flex flex-row pb-2 pt-2;
 }
 
 .navbar-link {
 	@apply hover:bg-lahs-blue-hover rounded-none  hover:rounded-md text-center hover:shadow-lg p-5 dark:text-gray-200 text-white font-semibold hover:text-gray-200 transition-all duration-200 ease-linear;
 }
 
-@screen sm {
+@media (max-width: 768px) {
+	.navbar {
+		@apply hidden;
+	}
 	.navbar-mobile {
-		@apply bg-lahs-blue border-2 border-gray-200 dark:border-gray-800 rounded-lg shadow-lg p-5 z-0 flex flex-row pb-2 pt-2 md:flex-col sm:flex-col md:items-center md:justify-between;
+		@apply list-none flex-col p-2 m-2;
+	}
+	.navbar-mobile-toggle-icon {
+		@apply dark:bg-gray-800 hover:bg-lahs-blue-hover  p-2 m-2 transition-all duration-200 ease-linear;
+	}
+	.navbar-mobile .show {
+		display: flex;
+	}
+	.mobile-nav-item {
+		display: none;
 	}
 }
