--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -12,7 +12,7 @@
 	}
 }
 .navbar {
-	@apply bg-lahs-blue border-2 border-gray-200 dark:border-gray-800 rounded-lg shadow-lg p-5 z-0 flex flex-row pb-2 pt-2;
+	@apply bg-lahs-blue border-gray-200 dark:border-gray-800 shadow-lg p-5 z-0 flex flex-row pb-2 pt-2;
 }
 
 .navbar-link {
